--- a/coronavirus_covid19_hashtags.ipynb
+++ b/coronavirus_covid19_hashtags.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Not used. But can use instead of manually computing polarity from vader_lexicon.txt as done below\n",
+    "# To compute normalized polarity\n",
     "\n",
     "def sentiment_scores(sentence): \n",
     "  \n",
