--- a/coronavirus_covid19_hashtags.ipynb
+++ b/coronavirus_covid19_hashtags.ipynb
@@ -66,8 +66,7 @@
     "from nltk.corpus import stopwords\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer "
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer "
    ]
   },
   {
@@ -98,6 +97,8 @@
     "# Importing tweets\n",
     "csv_file = 'hashtagcoronavirus_covid19.csv'\n",
     "column_name = 'tweet_text'\n",
+    "\n",
+    "# Initializing DataFrame tweets_df\n",
     "tweets_df = pd.read_csv(csv_file)\n",
     "tweet_text = tweets_df.loc[:, (column_name)]"
    ]
