--- a/coronavirus_covid19_hashtags.ipynb
+++ b/coronavirus_covid19_hashtags.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import needed files and libraries:"
+    "## Import needed files and libraries:"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clean data and compute both normalized and non-normalized polarity:"
+    "## Clean data and compute both normalized and non-normalized polarity:"
    ]
   },
   {
@@ -219,9 +219,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result:\n",
+    "## Result:\n",
     "\n",
-    "#### All Tweets:"
+    "### All Tweets:"
    ]
   },
   {
@@ -542,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tweets with asian reference:"
+    "### Tweets with asian reference:"
    ]
   },
   {
@@ -551,6 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Selecting all tweets with asian reference\n",
     "asian_ref_tweets = tweets_df.loc[tweets_df['asian_ref'] == 1.0]"
    ]
   },
