--- a/coronavirus_covid19_hashtags.ipynb
+++ b/coronavirus_covid19_hashtags.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Computing non-normalized polarity:"
+    "### Computing non-normalized polarity:"
    ]
   },
   {
