--- a/coronavirus_covid19_hashtags.ipynb
+++ b/coronavirus_covid19_hashtags.ipynb
@@ -48,7 +48,24 @@
     "- clean_text\n",
     "- polarity\n",
     "- normalized_polarity\n",
-    "- verified_user"
+    "- verified_user\n",
+    "\n",
+    "\n",
+    "### Conclusion\n",
+    "The distribution of polarity scores of tweets of most categories (i.e. without Asian references, verified/normal user) are generally even.  However, the distribution of tweets with Asian references is more skewed to the left with a negative mean polarity score. This indicates that tweets with Asian references more often has a negative sentiment compared to tweets without Asian references as its mean polarity score was close to neutral but positive (0.212) with a more even distribution around the mean. \n",
+    " \n",
+    "Due to the limitations described below, we cannot yet conclude the correlation between polarity scores and number of coronavirus cases in each US state. However, we do conclude that a larger dataset and a model to predict polarity scores will make the correlation/lack of correlation more apparent.\n",
+    "\n",
+    "### Limitations:\n",
+    "- We are limited to investigating data from Twitter over other social media platforms due to the difficulty of the available APIs (such as Facebook's API). \n",
+    "- We could not get a sustained amount of tweets over time due to Twitter's developer account limiting users from retrieving much data\n",
+    "- Locations of many tweet are unavailable or invalid. This is caused by users not wanting to share their location  for privacy reasons.\n",
+    "- VADER lexicon does not accurately detect the polarity scores of text due to the complications of grammar and cultural context.\n",
+    "\n",
+    "### Our next steps:\n",
+    "- Find an improved alternative to computing the polarity scores using Vader's SentimentAnalysis to increase the accuracy of our results. We may attempt machine learning to better identify polarity scores of more complicated structures.\n",
+    "- Create a time series of changing polarity scores and compare to the spread of coronavirus cases. Use this data to predict future polarity scores.\n",
+    "- Reach out to another team (Harvard PhD candidates) to potentially collaborate with them to help with mapping  discimmination against asian ethnic groups in the US. "
    ]
   },
   {
@@ -2505,34 +2522,6 @@
     "s_corr, _ = spearmanr(cases, mean_polarity)\n",
     "s_corr"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conclusion\n",
-    "The distribution of polarity scores of tweets of most categories (i.e. without Asian references, verified/normal user) are generally even.  However, the distribution of tweets with Asian references is more skewed to the left with a negative mean polarity score. This indicates that tweets with Asian references more often has a negative sentiment compared to tweets without Asian references as its mean polarity score was close to neutral but positive (0.212) with a more even distribution around the mean. \n",
-    " \n",
-    "Due to the limitations described below, we cannot yet conclude the correlation between polarity scores and number of coronavirus cases in each US state. However, we do conclude that a larger dataset and a model to predict polarity scores will make the correlation/lack of correlation more apparent.\n",
-    "\n",
-    "## Limitations:\n",
-    "- Limited to investigating data from Twitter over other social media platforms due to the difficulty of the available APIs (such as Facebook's API). \n",
-    "- We could not get a sustained amount of tweets over time due to Twitter's developer account limiting users from retrieving much data\n",
-    "- Locations of many tweet are unavailable or invalid. This is caused by users not wanting to share their location  for privacy reasons.\n",
-    "- VADER lexicon does not accurately detect the polarity scores of text due to the complications of grammar and cultural context.\n",
-    "\n",
-    "## Our next steps:\n",
-    "- Find the alternative to computing the polarity scores using Vader's SentimentAnalysis to increase the accuracy of our results. We may attempt machine learning to better identify polarity scores of more complicated structures.\n",
-    "- Create a time series of changing polarity scores and compare to the spread of coronavirus cases. Use this data to predict future polarity scores.\n",
-    "- Reach out to another team (Harvard PhD candidates) to potentially collaborate with them to help with mapping Asian discimmination in the US. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
